# MathScript

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MathScript_Remaining_TODO.md  README.md  UNSAFE_REVIEW.md  _resolve_merge.py  build.ps1  build.sh  mathscript-master-plan.md  test_detail.json
src/: CMakeLists.txt
src/bignum/: CMakeLists.txt  bignum.cpp
src/cfd/: CMakeLists.txt  cfd.cpp
src/combo/: CMakeLists.txt  combo.cpp
src/compress/: CMakeLists.txt  compress.cpp
src/control/: CMakeLists.txt  control.cpp
src/core/: CMakeLists.txt  error_format.cpp  matrix.cpp  operations.cpp  rng.cpp  scalar.cpp  sparse.cpp  sym.cpp  tensor.cpp
src/cplx/: CMakeLists.txt  cplx.cpp
src/cpu/: blas.cpp
src/crypto/: CMakeLists.txt  crypto.cpp  curve25519_donna_msvc.cpp  ed25519.cpp
src/cuda/: CMakeLists.txt  blas.cpp  buffer.cpp  elementwise.cpp  fft.cpp  nccl.cpp  nvml.cpp  solver.cpp  sparse.cpp
src/diffgeo/: CMakeLists.txt  diffgeo.cpp
src/distributed/: CMakeLists.txt  dist_matrix.cpp  iterative.cpp  matmul.cpp  mpi_context.cpp  solve.cpp
src/domain/: CMakeLists.txt  domain.cpp
src/exe/: CMakeLists.txt  main.cpp  mathscript_server.cpp  mathscriptc.cpp  repl.cpp
src/fem/: CMakeLists.txt  fem.cpp
src/fft/: CMakeLists.txt  fft.cpp  fft.hpp
src/finance/: CMakeLists.txt  finance.cpp
src/frameworks/: CMakeLists.txt
src/geo/: CMakeLists.txt  geo.cpp
src/graph/: CMakeLists.txt  graph.cpp
src/gui/: CMakeLists.txt  LineNumberArea.cpp  LineNumberArea.hpp  MainWindow.cpp  MainWindow.hpp  PlotSurfWidget.cpp  PlotSurfWidget.hpp  PlotWidget.cpp  PlotWidget.hpp  ReplCompleter.cpp  ReplCompleter.hpp  ReplWorker.cpp  ReplWorker.hpp  ScriptHighlighter.cpp  ScriptHighlighter.hpp  TextTransforms.cpp  TextTransforms.hpp  mathscript_gui.cpp
src/image/: CMakeLists.txt  image.cpp
src/info/: CMakeLists.txt  info.cpp
src/interp/: CMakeLists.txt  jit_backend_factory.cpp  jit_orc_llvm.cpp  jit_orc_stub.cpp  plot_console.cpp  repl_engine.cpp
src/linalg/: CMakeLists.txt  auxiliary.cpp  chol.cpp  construction.cpp  decompositions.cpp  det.cpp  detail.hpp  eig.cpp  expm.cpp  eye.cpp  iterative.cpp  lu.cpp  matmul.cpp  matrix_funcs.cpp  norm.cpp  ones.cpp  qr.cpp  solve.cpp  svd.cpp  sylvester.cpp  trace.cpp  transpose.cpp  zeros.cpp
src/ml/: CMakeLists.txt  ml.cpp
src/numthy/: CMakeLists.txt  numthy.cpp
src/ode/: CMakeLists.txt  ode.cpp
src/optim/: CMakeLists.txt  optim.cpp
src/pde/: CMakeLists.txt  pde.cpp
src/plugin/: CMakeLists.txt  MsPlugin.cpp  diagnostics.hpp  rule_context.cpp  rule_context.hpp  unsafe_registry.cpp  unsafe_registry.hpp
src/poly/: CMakeLists.txt  poly.cpp
src/prob/: CMakeLists.txt  prob.cpp
src/quantum/: CMakeLists.txt  quantum.cpp
src/runtime/: CMakeLists.txt  dispatch.cpp  dispatch.hpp  load_balancer.cpp  thread_pool.cpp  topology.cpp
src/signal/: CMakeLists.txt  signal.cpp
src/simd/: CMakeLists.txt  isa.cpp  vector_ops.cpp
src/special/: CMakeLists.txt  special.cpp
src/stats/: CMakeLists.txt  stats.cpp
src/symbolic/: CMakeLists.txt  sym_parser.cpp  symbolic.cpp
src/tensorops/: CMakeLists.txt  tensorops.cpp
src/topo/: CMakeLists.txt  topo.cpp
tests/: CMakeLists.txt
tests/compliance/: CMakeLists.txt  README.md  test_plugin_smoke.cpp  test_unsafe_annotation.cpp  unsafe_baseline.txt
tests/fuzz/: CMakeLists.txt  fuzz_bignum.cpp  fuzz_matrix_ops.cpp  fuzz_mpi_message.cpp  fuzz_poly_ops.cpp  fuzz_repl_input.cpp  fuzz_special_fns.cpp  fuzz_stress.cpp  fuzz_sym_parser.cpp
tests/integration/: CMakeLists.txt  test_crypto_wave231.cpp  test_distributed_repl_pipeline.cpp  test_fft_stats_pipeline.cpp  test_framework_pipeline.cpp  test_frameworks_pipeline.cpp  test_frameworks_repl_pipeline.cpp  test_jit_repl_parity.cpp  test_linalg_ode_pipeline.cpp  test_mathscriptc_pipeline.cpp  test_ode_optim_pipeline.cpp  test_ode_pde_pipeline.cpp  test_ode_pde_poly_pipeline.cpp  test_ode_repl_complex_pipeline.cpp  test_ode_repl_pipeline.cpp  test_ode_stats_prob_pipeline.cpp  test_pde_repl_pipeline.cpp  test_pipeline_integration.cpp  test_poly_fft_pipeline.cpp  test_prob_stats_fft_repl_pipeline.cpp  test_prob_stats_pipeline.cpp  test_prob_stats_signal_pipeline.cpp  test_repl_linalg_pipeline.cpp  test_repl_pipeline.cpp  test_repl_wave100_pipeline.cpp  test_repl_wave101_pipeline.cpp  test_repl_wave102_pipeline.cpp  test_repl_wave103_pipeline.cpp  test_repl_wave104_pipeline.cpp  test_repl_wave105_pipeline.cpp  test_repl_wave106_pipeline.cpp  test_repl_wave107_pipeline.cpp  test_repl_wave108_pipeline.cpp  test_repl_wave109_pipeline.cpp  test_repl_wave110_pipeline.cpp  test_repl_wave111_pipeline.cpp  test_repl_wave112_pipeline.cpp  test_repl_wave113_pipeline.cpp  test_repl_wave114_pipeline.cpp  test_repl_wave115_pipeline.cpp  (+147 more)
tests/numerical/: CMakeLists.txt  test_bessel_ref.cpp  test_core_ops_adv.cpp  test_core_ops_ref.cpp  test_fft_adv2.cpp  test_fft_dct_adv.cpp  test_fft_dct_prob_ref.cpp  test_fft_ext_ref.cpp  test_fft_extended_ref.cpp  test_fft_phase_energy.cpp  test_fft_prob_remaining.cpp  test_fft_ref.cpp  test_fft_transforms_adv.cpp  test_iterative_ref.cpp  test_iterative_solvers_ref.cpp  test_linalg_basic_ref.cpp  test_linalg_cond_rank.cpp  test_linalg_decomp_adv.cpp  test_linalg_decomp_ref.cpp  test_linalg_hess_lsq.cpp  test_linalg_hess_schur_ref.cpp  test_linalg_iter_adv.cpp  test_linalg_iterative_adv.cpp  test_linalg_ldl_eig.cpp  test_linalg_logm_sqrtm.cpp  test_linalg_new_funcs.cpp  test_linalg_norm_cg_adv.cpp  test_linalg_qr_ref.cpp  test_linalg_ref.cpp  test_linalg_struct_adv.cpp  test_linalg_svd_adv.cpp  test_linalg_tril_triu.cpp  test_matrix_construction_ref.cpp  test_ode_adaptive.cpp  test_ode_adv2.cpp  test_ode_advanced_ref.cpp  test_ode_ref.cpp  test_pde_adv.cpp  test_pde_adv2.cpp  test_pde_ref.cpp  (+23 more)
tests/performance/: CMakeLists.txt  bench_compress.cpp  bench_crypto.cpp  bench_distributed_cellai.cpp  bench_fem.cpp  bench_fft.cpp  bench_finance.cpp  bench_frameworks.cpp  bench_geo.cpp  bench_graph.cpp  bench_image.cpp  bench_linalg.cpp  bench_matmul.cpp  bench_ode_pde.cpp  bench_optim_ml.cpp  bench_optim_symbolic.cpp  bench_prob.cpp  (+12 more)
(+824 files in other folders)
