add_subdirectory(plugin)
add_subdirectory(core)
add_subdirectory(runtime)
add_subdirectory(linalg)
add_subdirectory(fft)
add_subdirectory(stats)
add_subdirectory(prob)
add_subdirectory(optim)
add_subdirectory(signal)
add_subdirectory(special)
add_subdirectory(simd)
add_subdirectory(cuda)
add_subdirectory(interp)
add_subdirectory(ode)
add_subdirectory(pde)
add_subdirectory(fem)
add_subdirectory(poly)
add_subdirectory(symbolic)
add_subdirectory(domain)
add_subdirectory(distributed)
add_subdirectory(frameworks)
add_subdirectory(numthy)
add_subdirectory(combo)
add_subdirectory(info)
add_subdirectory(finance)
add_subdirectory(control)
add_subdirectory(graph)
add_subdirectory(cplx)
add_subdirectory(quantum)
add_subdirectory(geo)
add_subdirectory(diffgeo)
add_subdirectory(topo)
add_subdirectory(tensorops)
add_subdirectory(ml)
add_subdirectory(image)
add_subdirectory(compress)
add_subdirectory(cfd)
add_subdirectory(bignum)
add_subdirectory(crypto)
add_subdirectory(gui)
add_subdirectory(exe)

add_library(mathscript INTERFACE)
target_link_libraries(mathscript INTERFACE
    ms_core
    ms_linalg
    ms_runtime
    ms_fft
    ms_stats
    ms_prob
    ms_optim
    ms_signal
    ms_special
    ms_simd
    ms_cuda
    ms_interp
    ms_ode
    ms_pde
    ms_fem
    ms_poly
    ms_symbolic
    ms_domain
    ms_distributed
    ms_frameworks
    ms_numthy
    ms_combo
    ms_info
    ms_finance
    ms_control
    ms_graph
    ms_cplx
    ms_quantum
    ms_geo
    ms_diffgeo
    ms_topo
    ms_tensorops
    ms_ml
    ms_image
    ms_compress
    ms_cfd
    ms_bignum
    ms_crypto
)
target_include_directories(mathscript INTERFACE
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_BINARY_DIR}/include
)
