include(CTest)

function(add_ms_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE mathscript GTest::gtest_main)
    target_include_directories(${name} PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_BINARY_DIR}/include
    )
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_ms_test(test_matmul unit/test_matmul.cpp)
add_ms_test(test_lu unit/test_lu.cpp)
add_ms_test(test_qr unit/test_qr.cpp)
add_ms_test(test_solve unit/test_solve.cpp)
add_ms_test(test_norm unit/test_norm.cpp)
add_ms_test(test_linalg_ext unit/test_linalg_ext.cpp)
add_ms_test(test_fft_ext unit/test_fft_ext.cpp)
add_ms_test(test_signal_ext unit/test_signal_ext.cpp)
add_ms_test(test_stats_prob_ext unit/test_stats_prob_ext.cpp)
add_ms_test(test_ode_pde_optim unit/test_ode_pde_optim.cpp)
add_ms_test(test_poly_domain unit/test_poly_domain.cpp)
add_ms_test(test_simd unit/test_simd.cpp)
add_ms_test(test_cuda_stub unit/test_cuda_stub.cpp)
add_ms_test(test_integration unit/test_integration.cpp)
add_ms_test(test_dispatch unit/test_dispatch.cpp)
add_ms_test(test_mpi_stub unit/test_mpi_stub.cpp)
add_ms_test(test_cuda_ext unit/test_cuda_ext.cpp)
add_ms_test(test_dist_block unit/test_dist_block.cpp)
add_ms_test(test_sparse_spmv unit/test_sparse_spmv.cpp)
add_ms_test(test_repl_session unit/test_repl_session.cpp)
add_ms_test(test_dist_multi_rank unit/test_dist_multi_rank.cpp)
add_ms_test(test_load_balancer unit/test_load_balancer.cpp)
add_ms_test(test_frameworks unit/test_frameworks.cpp)
add_ms_test(test_dist_lu unit/test_dist_lu.cpp)
add_ms_test(test_special_ext unit/test_special_ext.cpp)
add_ms_test(test_special_bessel unit/test_special_bessel.cpp)
add_ms_test(test_special_hyper unit/test_special_hyper.cpp)
add_ms_test(test_special_poly_elliptic unit/test_special_poly_elliptic.cpp)
add_ms_test(test_special_zeta_theta unit/test_special_zeta_theta.cpp)
add_ms_test(test_special_heun_painleve unit/test_special_heun_painleve.cpp)
add_ms_test(test_blas_dgemm unit/test_blas_dgemm.cpp)
add_ms_test(test_blas_lapack unit/test_blas_lapack.cpp)
add_ms_test(test_symbolic unit/test_symbolic.cpp)
add_ms_test(test_fuzz_stress fuzz/fuzz_stress.cpp)

if(MS_BUILD_FUZZ)
    add_subdirectory(fuzz)
endif()
