include(CTest)

function(add_ms_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE mathscript GTest::gtest_main)
    target_include_directories(${name} PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_BINARY_DIR}/include
    )
    if(MS_ENABLE_COVERAGE AND NOT MSVC)
        target_compile_options(${name} PRIVATE -fexceptions)
    endif()
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_ms_test(test_matmul unit/test_matmul.cpp)
add_ms_test(test_lu unit/test_lu.cpp)
add_ms_test(test_qr unit/test_qr.cpp)
add_ms_test(test_solve unit/test_solve.cpp)
add_ms_test(test_norm unit/test_norm.cpp)
add_ms_test(test_linalg_ext unit/test_linalg_ext.cpp)
add_ms_test(test_fft_ext unit/test_fft_ext.cpp)
add_ms_test(test_signal_ext unit/test_signal_ext.cpp)
add_ms_test(test_stats_prob_ext unit/test_stats_prob_ext.cpp)
add_ms_test(test_ode_pde_optim unit/test_ode_pde_optim.cpp)
add_ms_test(test_poly_domain unit/test_poly_domain.cpp)
add_ms_test(test_simd unit/test_simd.cpp)
add_ms_test(test_cuda_stub unit/test_cuda_stub.cpp)
add_ms_test(test_cuda_matmul unit/test_cuda_matmul.cpp)
add_ms_test(test_integration unit/test_integration.cpp)
add_ms_test(test_dispatch unit/test_dispatch.cpp)
add_ms_test(test_mpi_stub unit/test_mpi_stub.cpp)
add_ms_test(test_cuda_ext unit/test_cuda_ext.cpp)
add_ms_test(test_dist_block unit/test_dist_block.cpp)
add_ms_test(test_sparse_spmv unit/test_sparse_spmv.cpp)
add_ms_test(test_repl_session unit/test_repl_session.cpp)
add_ms_test(test_repl_commands unit/test_repl_commands.cpp)
add_ms_test(test_plot_console unit/test_plot_console.cpp)
add_ms_test(test_jit_backend unit/test_jit_backend.cpp)
add_ms_test(test_linalg_decomp unit/test_linalg_decomp.cpp)
add_ms_test(test_core_ext unit/test_core_ext.cpp)
add_ms_test(test_signal_filters unit/test_signal_filters.cpp)
add_ms_test(test_stats_prob_more unit/test_stats_prob_more.cpp)
add_ms_test(test_float_linalg unit/test_float_linalg.cpp)
add_ms_test(test_special_misc unit/test_special_misc.cpp)
add_ms_test(test_fft_core unit/test_fft_core.cpp)
add_ms_test(test_symbolic_ext unit/test_symbolic_ext.cpp)
add_ms_test(test_iterative_ext unit/test_iterative_ext.cpp)
add_ms_test(test_optim_ode_more unit/test_optim_ode_more.cpp)

add_executable(test_mathscriptc_cli unit/test_mathscriptc_cli.cpp)
target_link_libraries(test_mathscriptc_cli PRIVATE GTest::gtest_main)
target_compile_definitions(test_mathscriptc_cli PRIVATE "MATHSCRIPTC_PATH=\"$<TARGET_FILE:mathscriptc>\"")
add_dependencies(test_mathscriptc_cli mathscriptc)
add_test(NAME test_mathscriptc_cli COMMAND test_mathscriptc_cli)

add_executable(test_repl_cli unit/test_repl_cli.cpp)
target_link_libraries(test_repl_cli PRIVATE GTest::gtest_main)
target_compile_definitions(test_repl_cli PRIVATE "MATHSCRIPT_REPL_PATH=\"$<TARGET_FILE:mathscript-repl>\"")
add_dependencies(test_repl_cli mathscript-repl)
add_test(NAME test_repl_cli COMMAND test_repl_cli)
add_ms_test(test_simd_ext unit/test_simd_ext.cpp)
add_ms_test(test_frameworks_ext unit/test_frameworks_ext.cpp)
add_ms_test(test_special_smoke unit/test_special_smoke.cpp)
add_ms_test(test_special_edge unit/test_special_edge.cpp)
add_ms_test(test_special_sweep unit/test_special_sweep.cpp)
add_ms_test(test_linalg_chol unit/test_linalg_chol.cpp)
add_ms_test(test_dist_multi_rank unit/test_dist_multi_rank.cpp)
add_ms_test(test_load_balancer unit/test_load_balancer.cpp)
add_ms_test(test_frameworks unit/test_frameworks.cpp)
add_ms_test(test_dist_lu unit/test_dist_lu.cpp)
add_ms_test(test_special_ext unit/test_special_ext.cpp)
add_ms_test(test_special_bessel unit/test_special_bessel.cpp)
add_ms_test(test_special_hyper unit/test_special_hyper.cpp)
add_ms_test(test_special_poly_elliptic unit/test_special_poly_elliptic.cpp)
add_ms_test(test_special_zeta_theta unit/test_special_zeta_theta.cpp)
add_ms_test(test_special_heun_painleve unit/test_special_heun_painleve.cpp)
add_ms_test(test_blas_dgemm unit/test_blas_dgemm.cpp)
add_ms_test(test_blas_lapack unit/test_blas_lapack.cpp)
add_ms_test(test_symbolic unit/test_symbolic.cpp)
add_ms_test(test_fuzz_stress fuzz/fuzz_stress.cpp)
add_ms_test(test_core_matrix unit/test_core_matrix.cpp)
add_ms_test(test_memory unit/test_memory.cpp)
add_ms_test(test_error_types unit/test_error_types.cpp)
add_ms_test(test_runtime unit/test_runtime.cpp)
add_ms_test(test_data_driven unit/test_data_driven.cpp)

if(TARGET mathscript-server)
    add_executable(test_server_cli unit/test_server_cli.cpp)
    target_link_libraries(test_server_cli PRIVATE GTest::gtest_main)
    target_compile_definitions(test_server_cli PRIVATE "MATHSCRIPT_SERVER_PATH=\"$<TARGET_FILE:mathscript-server>\"")
    add_dependencies(test_server_cli mathscript-server)
    add_test(NAME test_server_cli COMMAND test_server_cli)
endif()

add_subdirectory(compliance)
add_subdirectory(numerical)

if(MS_BUILD_FUZZ)
    add_subdirectory(fuzz)
endif()
