include(CTest)

function(add_ms_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE mathscript GTest::gtest_main)
    target_include_directories(${name} PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_BINARY_DIR}/include
    )
    if(MS_ENABLE_COVERAGE AND NOT MSVC)
        target_compile_options(${name} PRIVATE -fexceptions)
    endif()
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_ms_test(test_matmul unit/test_matmul.cpp)
add_ms_test(test_lu unit/test_lu.cpp)
add_ms_test(test_qr unit/test_qr.cpp)
add_ms_test(test_solve unit/test_solve.cpp)
add_ms_test(test_norm unit/test_norm.cpp)
add_ms_test(test_linalg_ext unit/test_linalg_ext.cpp)
add_ms_test(test_fft_ext unit/test_fft_ext.cpp)
add_ms_test(test_signal_ext unit/test_signal_ext.cpp)
add_ms_test(test_stats_prob_ext unit/test_stats_prob_ext.cpp)
add_ms_test(test_ode_pde_optim unit/test_ode_pde_optim.cpp)
add_ms_test(test_ode_advanced2 unit/test_ode_advanced2.cpp)
add_ms_test(test_poly_domain unit/test_poly_domain.cpp)
add_ms_test(test_simd unit/test_simd.cpp)
add_ms_test(test_cuda_stub unit/test_cuda_stub.cpp)
add_ms_test(test_cuda_matmul unit/test_cuda_matmul.cpp)
add_ms_test(test_integration unit/test_integration.cpp)
add_ms_test(test_dispatch unit/test_dispatch.cpp)
add_ms_test(test_mpi_stub unit/test_mpi_stub.cpp)
add_ms_test(test_cuda_ext unit/test_cuda_ext.cpp)
add_ms_test(test_dist_block unit/test_dist_block.cpp)
add_ms_test(test_sparse_spmv unit/test_sparse_spmv.cpp)
add_ms_test(test_repl_session unit/test_repl_session.cpp)
add_ms_test(test_repl_commands unit/test_repl_commands.cpp)
add_ms_test(test_plot_console unit/test_plot_console.cpp)
add_ms_test(test_jit_backend unit/test_jit_backend.cpp)
add_ms_test(test_linalg_decomp unit/test_linalg_decomp.cpp)
add_ms_test(test_core_ext unit/test_core_ext.cpp)
add_ms_test(test_signal_filters unit/test_signal_filters.cpp)
add_ms_test(test_stats_prob_more unit/test_stats_prob_more.cpp)
add_ms_test(test_float_linalg unit/test_float_linalg.cpp)
add_ms_test(test_special_misc unit/test_special_misc.cpp)
add_ms_test(test_fft_core unit/test_fft_core.cpp)
add_ms_test(test_fft_freq unit/test_fft_freq.cpp)
add_ms_test(test_symbolic_ext unit/test_symbolic_ext.cpp)
add_ms_test(test_iterative_ext unit/test_iterative_ext.cpp)
add_ms_test(test_optim_ode_more unit/test_optim_ode_more.cpp)

add_executable(test_mathscriptc_cli unit/test_mathscriptc_cli.cpp)
target_link_libraries(test_mathscriptc_cli PRIVATE GTest::gtest_main)
target_compile_definitions(test_mathscriptc_cli PRIVATE "MATHSCRIPTC_PATH=\"$<TARGET_FILE:mathscriptc>\"")
add_dependencies(test_mathscriptc_cli mathscriptc)
add_test(NAME test_mathscriptc_cli COMMAND test_mathscriptc_cli)

add_executable(test_repl_cli unit/test_repl_cli.cpp)
target_link_libraries(test_repl_cli PRIVATE GTest::gtest_main)
target_compile_definitions(test_repl_cli PRIVATE "MATHSCRIPT_REPL_PATH=\"$<TARGET_FILE:mathscript-repl>\"")
add_dependencies(test_repl_cli mathscript-repl)
add_test(NAME test_repl_cli COMMAND test_repl_cli)
add_ms_test(test_simd_ext unit/test_simd_ext.cpp)
add_ms_test(test_frameworks_ext unit/test_frameworks_ext.cpp)
add_ms_test(test_special_smoke unit/test_special_smoke.cpp)
add_ms_test(test_special_edge unit/test_special_edge.cpp)
add_ms_test(test_special_sweep unit/test_special_sweep.cpp)
add_ms_test(test_linalg_chol unit/test_linalg_chol.cpp)
add_ms_test(test_dist_multi_rank unit/test_dist_multi_rank.cpp)
add_ms_test(test_load_balancer unit/test_load_balancer.cpp)
add_ms_test(test_frameworks unit/test_frameworks.cpp)
add_ms_test(test_dist_lu unit/test_dist_lu.cpp)
add_ms_test(test_special_ext unit/test_special_ext.cpp)
add_ms_test(test_special_bessel unit/test_special_bessel.cpp)
add_ms_test(test_special_hyper unit/test_special_hyper.cpp)
add_ms_test(test_special_poly_elliptic unit/test_special_poly_elliptic.cpp)
add_ms_test(test_special_zeta_theta unit/test_special_zeta_theta.cpp)
add_ms_test(test_special_heun_painleve unit/test_special_heun_painleve.cpp)
add_ms_test(test_special_voigt unit/test_special_voigt.cpp)
add_ms_test(test_blas_dgemm unit/test_blas_dgemm.cpp)
add_ms_test(test_blas_lapack unit/test_blas_lapack.cpp)
add_ms_test(test_symbolic unit/test_symbolic.cpp)
add_ms_test(test_fuzz_stress fuzz/fuzz_stress.cpp)
add_ms_test(test_core_matrix unit/test_core_matrix.cpp)
add_ms_test(test_memory unit/test_memory.cpp)
add_ms_test(test_error_types unit/test_error_types.cpp)
add_ms_test(test_runtime unit/test_runtime.cpp)
add_ms_test(test_data_driven unit/test_data_driven.cpp)

if(TARGET mathscript-server)
    add_executable(test_server_cli unit/test_server_cli.cpp)
    target_link_libraries(test_server_cli PRIVATE GTest::gtest_main)
    target_compile_definitions(test_server_cli PRIVATE "MATHSCRIPT_SERVER_PATH=\"$<TARGET_FILE:mathscript-server>\"")
    add_dependencies(test_server_cli mathscript-server)
    add_test(NAME test_server_cli COMMAND test_server_cli)
endif()

add_ms_test(test_lu_typed unit/test_lu_typed.cpp)
add_ms_test(test_solve_typed unit/test_solve_typed.cpp)
add_ms_test(test_chol_typed unit/test_chol_typed.cpp)
add_ms_test(test_fft_typed unit/test_fft_typed.cpp)
add_ms_test(test_repl_advanced unit/test_repl_advanced.cpp)
add_ms_test(test_symbolic_advanced unit/test_symbolic_advanced.cpp)
add_ms_test(test_core_sym unit/test_core_sym.cpp)
add_ms_test(test_jit_factory unit/test_jit_factory.cpp)
add_ms_test(test_rng unit/test_rng.cpp)
add_ms_test(test_tensor unit/test_tensor.cpp)
add_ms_test(test_transpose unit/test_transpose.cpp)
add_ms_test(test_topology unit/test_topology.cpp)
add_ms_test(test_construction unit/test_construction.cpp)
add_ms_test(test_linalg_decomp_ext unit/test_linalg_decomp_ext.cpp)
add_ms_test(test_simd_vector_ops unit/test_simd_vector_ops.cpp)
add_ms_test(test_scalar_type unit/test_scalar_type.cpp)
add_ms_test(test_sparse_ext unit/test_sparse_ext.cpp)
add_ms_test(test_poly_ext unit/test_poly_ext.cpp)
add_ms_test(test_domain_types unit/test_domain_types.cpp)
add_ms_test(test_pde_extended unit/test_pde_extended.cpp)
add_ms_test(test_signal_windows unit/test_signal_windows.cpp)
add_ms_test(test_repl_api_direct unit/test_repl_api_direct.cpp)
add_ms_test(test_expr_templates unit/test_expr_templates.cpp)
add_ms_test(test_sym_extended unit/test_sym_extended.cpp)
add_ms_test(test_stats_numerical unit/test_stats_numerical.cpp)
add_ms_test(test_optim_extended unit/test_optim_extended.cpp)
add_ms_test(test_poly_extended unit/test_poly_extended.cpp)
add_ms_test(test_stats_gaps unit/test_stats_gaps.cpp)
add_ms_test(test_memory_extended unit/test_memory_extended.cpp)
add_ms_test(test_linalg_edge unit/test_linalg_edge.cpp)
add_ms_test(test_repl_error_paths unit/test_repl_error_paths.cpp)
add_ms_test(test_axiom_gria_ext unit/test_axiom_gria_ext.cpp)
add_ms_test(test_cellai_cypha_ext unit/test_cellai_cypha_ext.cpp)
add_ms_test(test_tensor_lb_numa unit/test_tensor_lb_numa.cpp)
add_ms_test(test_optim_result_types unit/test_optim_result_types.cpp)
add_ms_test(test_simd_extended unit/test_simd_extended.cpp)
add_ms_test(test_gria_advanced unit/test_gria_advanced.cpp)
add_ms_test(test_error_types_extended unit/test_error_types_extended.cpp)
add_ms_test(test_linalg_advanced unit/test_linalg_advanced.cpp)
add_ms_test(test_izaac_advanced unit/test_izaac_advanced.cpp)
add_ms_test(test_rng_statistical_quality unit/test_rng_statistical_quality.cpp)
add_ms_test(test_thread_pool_linalg_adv unit/test_thread_pool_linalg_adv.cpp)
add_ms_test(test_memory_allocators_adv unit/test_memory_allocators_adv.cpp)
add_ms_test(test_cpu_blas_kernel unit/test_cpu_blas_kernel.cpp)
add_ms_test(test_topology_dispatch_adv unit/test_topology_dispatch_adv.cpp)
add_ms_test(test_repl_session_adv unit/test_repl_session_adv.cpp)
add_ms_test(test_repl_interp_adv unit/test_repl_interp_adv.cpp)
add_ms_test(test_distributed_adv unit/test_distributed_adv.cpp)
add_ms_test(test_optim_adv unit/test_optim_adv.cpp)
add_ms_test(test_simd_isa_adv unit/test_simd_isa_adv.cpp)
add_ms_test(test_frameworks_adv unit/test_frameworks_adv.cpp)
add_ms_test(test_tensor_adv unit/test_tensor_adv.cpp)
add_ms_test(test_dist_matrix_adv unit/test_dist_matrix_adv.cpp)
add_ms_test(test_runtime_dispatch_adv unit/test_runtime_dispatch_adv.cpp)
add_ms_test(test_sparse_adv unit/test_sparse_adv.cpp)
add_ms_test(test_memory_adv unit/test_memory_adv.cpp)
add_ms_test(test_poly_adv unit/test_poly_adv.cpp)
add_ms_test(test_domain_adv unit/test_domain_adv.cpp)
add_ms_test(test_optim_adv2 unit/test_optim_adv2.cpp)
add_ms_test(test_stats_adv2 unit/test_stats_adv2.cpp)
add_ms_test(test_signal_adv2 unit/test_signal_adv2.cpp)
add_ms_test(test_symbolic_adv2 unit/test_symbolic_adv2.cpp)
add_ms_test(test_symbolic_extended unit/test_symbolic_extended.cpp)
add_ms_test(test_stats_edge unit/test_stats_edge.cpp)
add_ms_test(test_sparse_ops_adv unit/test_sparse_ops_adv.cpp)
add_ms_test(test_prob_adv2 unit/test_prob_adv2.cpp)
add_ms_test(test_poly_adv2 unit/test_poly_adv2.cpp)
add_ms_test(test_signal_adv3 unit/test_signal_adv3.cpp)
add_ms_test(test_signal_moving_average unit/test_signal_moving_average.cpp)
add_ms_test(test_special_struve_airy unit/test_special_struve_airy.cpp)
add_ms_test(test_optim_newton_broyden unit/test_optim_newton_broyden.cpp)
add_ms_test(test_optim_constrained unit/test_optim_constrained.cpp)
add_ms_test(test_tensor_scalar unit/test_tensor_scalar.cpp)
add_ms_test(test_prob_adv3 unit/test_prob_adv3.cpp)
add_ms_test(test_signal_windows_adv4 unit/test_signal_windows_adv4.cpp)
add_ms_test(test_optim_global unit/test_optim_global.cpp)
add_ms_test(test_numthy unit/test_numthy.cpp)
add_ms_test(test_combo unit/test_combo.cpp)
add_ms_test(test_info unit/test_info.cpp)
add_ms_test(test_finance unit/test_finance.cpp)
add_ms_test(test_linalg_iterative2 unit/test_linalg_iterative2.cpp)
add_ms_test(test_control  unit/test_control.cpp)
add_ms_test(test_graph    unit/test_graph.cpp)
add_ms_test(test_cplx     unit/test_cplx.cpp)
add_ms_test(test_quantum    unit/test_quantum.cpp)
add_ms_test(test_geo        unit/test_geo.cpp)
add_ms_test(test_diffgeo    unit/test_diffgeo.cpp)
add_ms_test(test_topo       unit/test_topo.cpp)
add_ms_test(test_tensorops  unit/test_tensorops.cpp)
add_ms_test(test_ml         unit/test_ml.cpp)
add_ms_test(test_image      unit/test_image.cpp)
add_ms_test(test_compress   unit/test_compress.cpp)
add_ms_test(test_bignum     unit/test_bignum.cpp)
add_ms_test(test_crypto     unit/test_crypto.cpp)
add_ms_test(test_checked_arith unit/test_checked_arith.cpp)
add_ms_test(test_prob_lognormal_weibull_laplace unit/test_prob_lognormal_weibull_laplace.cpp)
add_ms_test(test_units unit/test_units.cpp)
add_ms_test(test_fem unit/test_fem.cpp)

add_subdirectory(compliance)
add_subdirectory(numerical)
add_subdirectory(integration)

if(MS_BUILD_FUZZ)
    add_subdirectory(fuzz)
endif()
