add_library(ms_cuda STATIC buffer.cpp blas.cpp fft.cpp solver.cpp elementwise.cpp sparse.cpp nvml.cpp nccl.cpp)
target_include_directories(ms_cuda PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include)
target_compile_definitions(ms_cuda PUBLIC MS_HAS_CUDA=0 MS_HAS_NCCL=0)
target_link_libraries(ms_cuda PUBLIC ms_core)
target_compile_features(ms_cuda PUBLIC cxx_std_23)

if(MS_ENABLE_CUDA)
    find_package(CUDAToolkit QUIET)
    if(CUDAToolkit_FOUND)
        target_compile_definitions(ms_cuda PUBLIC MS_HAS_CUDA=1)
        target_link_libraries(ms_cuda PUBLIC CUDA::cudart CUDA::cublas CUDA::cufft CUDA::cusolver CUDA::cusparse)
        message(STATUS "MathScript CUDA toolkit found: ${CUDAToolkit_VERSION}")

        if(MS_ENABLE_NCCL)
            find_path(NCCL_INCLUDE_DIR NAMES nccl.h)
            find_library(NCCL_LIBRARY NAMES nccl)
            if(NCCL_INCLUDE_DIR AND NCCL_LIBRARY)
                target_compile_definitions(ms_cuda PUBLIC MS_HAS_NCCL=1)
                target_include_directories(ms_cuda PRIVATE ${NCCL_INCLUDE_DIR})
                target_link_libraries(ms_cuda PUBLIC ${NCCL_LIBRARY})
                message(STATUS "MathScript NCCL found: ${NCCL_LIBRARY}")
            else()
                message(STATUS "MathScript NCCL not found; using stub (MS_HAS_NCCL=0)")
            endif()
        endif()
    endif()
endif()
