add_library(ms_distributed STATIC mpi_context.cpp dist_matrix.cpp solve.cpp matmul.cpp iterative.cpp)
target_include_directories(ms_distributed PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include)
target_compile_definitions(ms_distributed PUBLIC MS_HAS_MPI=0)
target_link_libraries(ms_distributed PUBLIC ms_core ms_linalg)
target_compile_features(ms_distributed PUBLIC cxx_std_23)

if(MS_ENABLE_MPI)
    find_package(MPI QUIET)
    if(MPI_FOUND)
        target_compile_definitions(ms_distributed PUBLIC MS_HAS_MPI=1)
        target_link_libraries(ms_distributed PUBLIC MPI::MPI_CXX)
        message(STATUS "MathScript MPI found")
    endif()
endif()
