add_library(ms_simd STATIC isa.cpp vector_ops.cpp)
target_include_directories(ms_simd PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include)
target_link_libraries(ms_simd PUBLIC ms_core)
target_compile_features(ms_simd PUBLIC cxx_std_23)

if(MSVC)
    target_compile_options(ms_simd PRIVATE /arch:AVX2)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(ms_simd PRIVATE -mavx2 -mfma)
endif()
